tests/snapshots/trace_solver__spanshot_request@7010052865847964293.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: ResetBindingMode
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "[mut ref x]: &[T]"
---
[mut ref x] @ p: &[T]
// Applying rule `ConstructorRef`
mut ref x @ &(*p).0: &T
// Applying rule `BindingBorrow`
mut x @ &&(*p).0: &&T
// Applying rule `MutBindingResetBindingMode`
mut x @ &(*p).0: &T
// Applying rule `MutBindingResetBindingMode`
mut x @ (*p).0: T
// Applying rule `Binding`
let mut x: T = (*p).0

// Final bindings (simplified):
let mut x: T = (*p).0;
